# swarm-exploration

./: Readme.MD  demo.mkv
docu/: rosgraph1robot.dot  rosgraph4robots.dot
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_srvs/: CMakeLists.txt  package.xml
src/custom_srvs/srv/: AddTwoInts.srv  SetVelocities.srv
src/learning_actionlib/: CMakeLists.txt  package.xml
src/learning_actionlib/src/: Fibonaccicancel.cpp  Fibonacciserver.cpp
src/m2wr_description/: CMakeLists.txt  package.xml
src/m2wr_description/launch/: rviz.launch  rviz_arm.launch  spawn.launch  spawn_arm.launch  spawn_world1.launch  spawn_world2.launch  spawn_world3.launch
src/motion_plan/: CMakeLists.txt  package.xml
src/node_counting_alg/: CMakeLists.txt  info.plantuml  package.xml
src/node_counting_alg/config/: motors_config.yaml
src/node_counting_alg/launch/: spawn1-castor.launch  spawn1-hol.launch  spawn1-nonhol.launch  spawn1-robot5.launch  spawn1-summit.launch  spawn10nonhol.launch  spawn1nonhol.launch  spawn2-hol.launch  spawn2-nonhol.launch  spawn4-hol.launch  spawn_robot.launch  world_init.launch
src/node_counting_alg/script/: bug_alg_service.py  bug_control_node.py  controller_node.py  go_to_point_service.py  map_plotter_node.py  obstacle_avoidance_node.py  reading_laser_node.py  wall_follow_service.py
src/node_counting_alg/src/: basic_planner.cpp  common_mapper_node.cpp  controller_node.cpp  mapper.cpp  mapper_node.cpp  planner.cpp  planner_node.cpp
src/node_counting_alg/urdf/: components.gazebo  materials.xacro  pioneer3dx-v2.gazebo  pioneer3dx-v2.xacro  robot_castor.xacro  robot_hol.xacro  robot_nonhol.gazebo  robot_nonhol.xacro
src/robot1_description/: CMakeLists.txt  package.xml
src/spawn_example/: CMakeLists.txt  package.xml
(+70 files in other folders)
